switch to klogging

--- a/versions.properties
+++ b/versions.properties
@@ -35,6 +35,10 @@ version.com.jillesvangurp..search-client-jvm=1.99.13
 
 version.io.github.microutils..kotlin-logging=2.1.23
 
+version.io.klogging..klogging-jvm=0.4.9
+
+version.io.klogging..slf4j-klogging=0.2.7
+
 version.junit.jupiter=5.9.0
 
 version.kotest=5.4.2
@@ -43,6 +47,8 @@ version.kotlin=1.7.10
 ## # available=1.7.20-Beta
 
 plugin.org.jetbrains.dokka=1.7.10
+
+version.kotlinx.coroutines=1.6.4
 
 # logback does not work properly with slf4j 2 and they forgot to document how to fix that
 # wait until that is more straigtforward
